8296324: JVMTI GetStackTrace truncates vthread stack trace for agents loaded into running VM