src/hotspot/share/prims/jvmtiExport.cpp
@@ -382,7 +382,13 @@ JvmtiExport::get_jvmti_interface(JavaVM *jvm, void **penv, jint version) {
   }
   if (Continuations::enabled()) {
     // Virtual threads support. There is a performance impact when VTMS transitions are enabled.
-    java_lang_VirtualThread::set_notify_jvmti_events(true);
+    if (!java_lang_VirtualThread ::notify_jvmti_events()) {
+      java_lang_VirtualThread::set_notify_jvmti_events(true);
+      if (Thread::current_or_null() != NULL) { // need this for attached threads only 
+        ThreadInVMfromNative tiv(JavaThread::current());
+        java_lang_VirtualThread::init_static_notify_jvmti_events();
+      }
+    }
   }
 
   if (JvmtiEnv::get_phase() == JVMTI_PHASE_LIVE) {
